# algo-py

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
algo/algorithms/array/: binary_search.py  select.py  sort.py  stack.py
algo/algorithms/design/: backtracking.py  dp.py
algo/algorithms/graph/: apsp.py  flow.py  search.py  sssp.py
algo/algorithms/math/: euclid.py  hash.py  prime.py
algo/applications/: bounded_knapsack.py  coin_change.py  coin_change_2.py  longest_palindrome_substring.py  maximum_subarray.py  ones_and_zeros.py  palindrome_partitioning.py  partition_equal_subset_sum.py  partition_to_k_equal_sum_subsets.py  permutations.py  restore_ip_address.py  skyline_problem.py  sudoku_solver.py  sum_of_subarray_minimums.py  super_egg_drop.py  target_sum.py  trapping_rain_water.py  word_break.py  word_break_II.py  word_ladder_II.py
algo/data_structures/: avl.py  bag.py  bst.py  fenwick.py  graph.py  treap.py  union_find.py
tests/algorithms/: test_array.py  test_bs.py  test_graph.py  test_math.py  test_sort.py
tests/applications/: data.py  test_backtracking.py  test_bfs_dfs.py  test_divide_and_conquer.py  test_dp.py  test_lc_problems.py  test_monotonic_stack.py  test_sliding_window.py  test_sweep_line.py
tests/data_structures/: test_avl.py  test_bag.py  test_bst.py  test_fenwick.py  test_graph.py  test_treap.py  test_union_find.py
