[tool.poetry]
name = "algo-py"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Algorithms in Python"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
ipython = "^7.20.0"
mypy = "^0.812"
pytest = "^6.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
