[tool.poetry]
name = "algo-py"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Algorithms in Python"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.1a1"
flake8 = "^6.0.0"
ipython = "^8.0.1"
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
